# quantammsim

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  debug.md  pyproject.toml  setup.py
docs/: autobuild.py  joint_calibration_analysis.md  reclamm_thermostat_design.md  requirements.txt
experiments/: compare_exposures.py  diagnose_spikes.py  diagnostic_lp_supply.py  do_data_import.py  do_jax_historic_training.py  do_jax_historic_training_from_restarts.py  log_training_products.txt  orig_prod_design_0321_sgd_sonic_.jsonl  pool_registry.py  prod_design_0321_sgd_sonic_.jsonl  run_cross_pool_diagnostics.py  run_cross_pool_linear.py  run_cross_pool_noise_linear.py  run_deconfounder_noise.py  run_deepsets_noise.py  run_deepsets_v2.py  run_deepsets_volume.py  run_hybrid_noise.py  run_linear_market_noise.py  run_mlp_noise.py  run_pool_battery.py  run_residual_comparison.py  run_tuning.sh  scan_lp_events.py  test_sum.py  train_bfgs_example.py  tune_reclamm_calibrated_noise.py  tune_reclamm_params.py  tune_training_hyperparams.py  tune_training_hyperparams_innerbfgs.py  tune_training_hyperparams_innercmaes.py  tune_training_hyperparams_inneroptuna.py  validate_tvl_counterfactual.py
notebooks/: profile_on_colab.ipynb  train_sde_gan_colab.ipynb
quantammsim/: __init__.py  _simulationRunDto.py
scripts/: ablation_drift_init_only.py  ablation_no_training.py  ablation_sigw1_with_init.py  analyse_sgd.py  benchmark_reclamm_interpolation.py  build_pool_grids.py  calibrate_noise_bayesian.py  calibrate_noise_hierarchical.py  calibrate_noise_unified.py  calibrate_reclamm_noise.py  compare_modelled_vs_real.py  compare_reclamm_geometric_noise_runs.py  compare_reclamm_thermostats.py  demo_run.py  demo_run_chunks_from_chain_data.py  demo_run_from_chain_data.py  demo_train.py  download_data.py  fetch_token_mcaps.py  fit_price_sde.py  plot_calibrated_vs_real.py  plot_model_vs_real_reclamm.py  plot_predicted_vs_real_volume.py  plot_reclamm_optuna_result.py  plot_top50_predicted_vs_real.py  profile_bfgs_memory.py  profile_cmaes_memory.py  profile_fused_reserves_memory.py  profile_training_loop.py  run_direct_calibration_top50.py  run_mlp_calibration.py  run_mlp_sweep.py  (+7 more)
(+323 files in other folders)
