[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantammsim"
version = "0.0.0"
description = "QuantAMM Simulator"
requires-python = ">=3.8"
dependencies = [
    "jax>=0.4.0",
    "jaxlib",
    "numpy>=1.21.0",
    "pandas>=1.3.6",
    "flask",
    "flask-jwt-extended",
    "scipy",
    "seaborn",
    "cvxpy",
    "matplotlib",
    "tqdm",
    "optuna",
    "pyarrow",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "black",
    "flake8",
    "hypothesis",
    "optax",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
]

[tool.hatch.build.targets.wheel]
packages = [
    "quantammsim",
    "quantammsim.core_simulator",
    "quantammsim.pools",
    "quantammsim.pools.FM_AMM",
    "quantammsim.pools.G3M",
    "quantammsim.runners",
]

[tool.hatch.build]
include = [
    "quantammsim/**/*.py",
    "quantammsim/**/*.json",
    "quantammsim/**/*.txt",
]
exclude = [
    "quantammsim/**/*_test.py",
    "quantammsim/**/tests/*",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]
norecursedirs = ["tests/scripts", "tests/__pycache__", ".git", "*.egg-info"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "training: marks tests that involve model training",
    "requires_data: marks tests that require external data files",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["quantammsim"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]